chore: need refactoring!

--- a/test/storage/stubs/conf.ini
+++ b/test/storage/stubs/conf.ini
@@ -5,7 +5,11 @@ certificate_title=Example title
 criteria_narrative=Example criteria
 
 badge_id=5a0d1ec1-121f-4800-8509-168cad7b5082
-chain=ethereum_ropsten
+chain=bitcoin_testnet
+
+usb_name=/cert-issuer/test/storage/stubs
+unsigned_certificates_dir=/cert-issuer/test/storage/data/test-issuer/unsigned_certificates/
+blockchain_certificates_dir=/cert-issuer/test/storage/data/test-issuer/blockchain_certificates/
 
 issuing_address=0x123
 key_file=private
