--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,14 +1,14 @@
 # Build Go application
 FROM golang:1.13.6-alpine3.10 as builder
-COPY . /app
+COPY ./issuing-service /app
 WORKDIR /app
 RUN go build -o /main /app/main.go
 
 # Make blockchain env
 FROM alpine:3.10 as cli
 
-COPY ./pkg/cert-issuer /cert-issuer-cli
-COPY ./pkg/cert-issuer/conf_regtest.ini /etc/cert-issuer/conf.ini
+COPY ./issuing-service/pkg/cert-issuer /cert-issuer-cli
+COPY ./issuing-service/pkg/cert-issuer/conf_regtest.ini /etc/cert-issuer/conf.ini
 
 RUN apk add --update \
         bash \
@@ -45,7 +45,7 @@ RUN python3 setup.py experimental --blockchain=ethereum
 
 # install htmltopdf cli
 WORKDIR /app/pkg/htmltopdf
-COPY ./pkg/htmltopdf /app/pkg/htmltopdf
+COPY ./issuing-service/pkg/htmltopdf /app/pkg/htmltopdf
 RUN sed -i -e 's/v3.11/edge/g' /etc/apk/repositories \
     && apk add --no-cache \
     openjdk8-jre-base \
@@ -60,5 +60,7 @@ RUN npm ci
 WORKDIR /app
 COPY ./Makefile .
 COPY --from=builder /main .
+
+ADD ./storage /storage
 
 CMD [ "./main" ]
