--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,9 +1,18 @@
-# Build Go application
-FROM golang:1.13.6-alpine3.10 as builder
+FROM golang:1.13-alpine3.10
 
-COPY ./issuing-service /app
-WORKDIR /app
-RUN go build -mod=vendor -o /main /app/main.go
+ENV GOPATH /go
+ENV GO111MODULE on
+
+RUN apk add --update --no-cache \
+    git \
+    make \
+    bash
+
+WORKDIR /go/src/github.com/cosmtrek/air
+RUN git clone https://github.com/cosmtrek/air.git .
+RUN make ci && make install
+
+COPY ./issuing-service /go/src/github.com/lastrust/issuing-service
 
 COPY ./issuing-service/pkg/cert-issuer /cert-issuer-cli
 COPY ./issuing-service/pkg/cert-issuer/conf_regtest.ini /etc/cert-issuer/conf.ini
@@ -42,7 +51,7 @@ WORKDIR /cert-issuer-cli
 RUN python3 setup.py experimental --blockchain=ethereum
 
 # install htmltopdf cli
-WORKDIR /app/pkg/htmltopdf
+WORKDIR /go/src/github.com/lastrust/issuing-service/pkg/htmltopdf
 COPY ./issuing-service/pkg/htmltopdf /app/pkg/htmltopdf
 RUN sed -i -e 's/v3.11/edge/g' /etc/apk/repositories \
     && apk add --no-cache \
@@ -57,5 +66,7 @@ RUN npm ci
 
 COPY ./storage /storage
 
-WORKDIR /app
-CMD [ "/main" ]
+WORKDIR /go/src/github.com/lastrust/issuing-service
+ENV GOFLAGS -mod=vendor
+CMD [ "air", "-d" ]
+
