--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -61,7 +61,7 @@ RUN sed -i -e 's/v3.11/edge/g' /etc/apk/repositories \
     chromium \
     && apk upgrade --no-cache --available
 ENV CHROME_BIN /usr/bin/chromium-browser
-RUN npm ci
+CMD npm ci
 
 COPY ./storage /storage
 
